--- a/frontInterviewProblem/前端问题回顾.md
+++ b/frontInterviewProblem/前端问题回顾.md
@@ -156,3 +156,19 @@
 }
 ```
 ## JavaScript基础
+## Vue
+## React
+## 综合问题
+### Vue 实现动态生成路由（动态生成菜单，根据菜单动态生成路由）
+路由需要分成两类，静态路由和动态路由。静态路由是任何菜单权限下都能查看的界面路由；动态路由是根据菜单权限动态生成的路由集合。这里的动态路由与VueRouter的动态路由概念没有任何关系。路由表只返回静态路由，动态路由通过router.addRoutes()去动态注入。
+```
+// 路由表设置
+const constantRouterMap // 静态路由
+const asyncRouterMap // 需要动态添加的路由
+export default new Router({
+  routes: constantRouterMap // 这里只返回静态路由
+})
+// 使用VueRouter的router.addRoutes(routes: Array<RouteConfig>)方法，动态添加路由。
+```
+### Vue 实现加载动态组件
+kepp-alive
