--- a/frontInterviewProblem/前端问题回顾.md
+++ b/frontInterviewProblem/前端问题回顾.md
@@ -160,6 +160,14 @@
 - 重排（回流）：当dom结构发生变化，需要重新计算页面布局，需要对页面布局重新排列的即是重排，例如增删dom元素，dom元素的尺寸边距宽高等改变。
 - 重绘：当元素的外观发生改变，但布局没有变化即是重绘，例如color、background、box-shadow等属性变化。
 ## JavaScript基础
+### JavaScript Event Loop(事件循环)
+1. 整体的script(作为第一个宏任务)开始执行的时候，会把所有代码分为两部分：“同步任务”、“异步任务”；
+2. 同步任务会直接进入主线程依次执行；
+3. 异步任务会再分为宏任务和微任务；
+4. 宏任务进入到Event Table中，并在里面注册回调函数，每当指定的事件完成时，Event Table会将这个函数移到Event Queue中；
+5. 微任务也会进入到另一个Event Table中，并在里面注册回调函数，每当指定的事件完成时，Event Table会将这个函数移到Event Queue中；
+6. 当主线程内的任务执行完毕，主线程为空时，会检查微任务的Event Queue，如果有任务，就全部执行，如果没有就执行下一个宏任务；
+7. 上述过程会不断重复，这就是Event Loop事件循环；
 ### JavaScript 装饰器 - Decorator
 装饰器decorator是ES7中的一个提案，目前处于stage-2阶段，装饰器其实就是一个函数，用于描述类、函数、属性、参数，通过@函数名的方式进行调用，它可以放在类和属性的前面。例如：
 ```
@@ -180,7 +188,6 @@ var _class = class App {};
 let App = log(_class) || _class;
 ```
 装饰是前置执行，例如：类装饰器，会在类被使用前进行调用；函数装饰器会在函数被调用前执行。
-
 ### JavaScript常用设计模式
 - #### 代理模式
   ```
@@ -307,7 +314,7 @@ let App = log(_class) || _class;
   在使用 Object.defineProperty 进行数据劫持的时候，对象和数组是分开处理的：对象是遍历对象属性之后进行递归劫持；数组是重写数组的原型方法比如 splice。这个我看了一些源码和资料。Object.defineProperty 本身是可以监控到数组下标的变化的，但尤大在 github issue 回复过从性能/体验的性价比考虑弃用了这种对数组的劫持方案。举例子就是对象属性通常比较少对每一个属性劫持不会消耗太多性能，但数组可能有成千上万个元素，如果每一个元素都劫持，无疑消耗过多性能。
 - #### Vue2 数据劫持的缺陷
   第一个缺陷是由于 Vue2 数据劫持底层是用 ES5 的 Object.defineProperty 实现的，所以不兼容 IE8 以下。
-  第二个缺陷是 Vue2 数据劫持无法检测数组和对象的变化，只会劫持一开始存在 data 选项里面的数据，这就是官网建议我们把可能要使用的数据一开始声明在 data 里面并提供初始值。对象新增属性可以通过 Vue.$set() 进行数据劫持，数组新增元素也可以通过 Vue.$set()，或者因为数组原型方法已经被重写了可以用 splice、push、unshift 等方法新增元素。
+  第二个缺陷是 Vue2 数据劫持无法检测数组和对象的变化，只会劫持一开始存在 data 选项里面的数据，这就是官网建议我们把可能要使用的数据一开始声明在 data 里面并提供初始值。对象新增属性可以通过 Vue.\$set() 进行数据劫持，数组新增元素也可以通过 Vue.$set()，或者因为数组原型方法已经被重写了可以用 splice、push、unshift 等方法新增元素。
 - #### Vue3 数据劫持的优势
   Vue3 数据劫持底层主要是使用 ES6 的 Proxy 实现。
   ##### Proxy 的优势如下:
